--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "react-chartjs": "^1.2.0",
     "react-dom": "^16.3.0",
     "react-flip-move": "^3.0.1",
+    "react-lazyload": "^2.3.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.1.1",
     "react-transition-group": "^2.3.1"
